# scala3-hdl

./: .gitignore  .gitmodules  README.md  build.sc
docs/: dev-notes.md  hdl-features.md  ir-notes.md
dynamic/src/: main.scala
examples/src/: c1.scala  c2.scala  c3.scala  c4.scala  main.scala
hdl/src/: BundleLit.scala  BundleLitImpl.scala  BundleMacros.scala  CompileTimeTypeTests.scala  asthash.scala  builder.scala  (+16 more)
hdl8/: DIRECTION_SOLUTION.md  IMPLEMENTATION_SUMMARY.md
legacy/: build.sc
riscv/: README.md
riscv_inorder/: README.md
riscv_ooo/: README.md
sim/: Cargo.toml  Makefile  build.rs
sim/.cargo/: config.toml
sim/build-dir/: Top.sv  filelist.f
sim/src/: asm_parser.rs  lib.rs  main.rs
sim/src/simif/: mod.rs  simif.rs
sim/tests/: alu_test.asm  alu_test.hex  riscv64i_bp_btb_ras_test.S  riscv64i_bp_btb_ras_test.hex  riscv64i_shift_cf_test.hex  riscv64i_shift_cf_test_long.hex  rv64i_bp_alternating.S  rv64i_bp_alternating.hex  rv64i_bp_alternating_4.S  rv64i_bp_alternating_4.hex  rv64i_bp_biased.S  rv64i_bp_biased.hex  rv64i_bp_correlated_4.S  rv64i_bp_correlated_4.hex  rv64i_bp_global_history.S  rv64i_bp_global_history.hex  rv64i_bp_warmup_16.S  rv64i_bp_warmup_16.hex  rv64i_btb_ring64_laps4.S  rv64i_btb_ring64_laps4.hex  rv64i_dirty_evict_reload_cache2k.S  rv64i_dirty_evict_reload_cache2k.hex  rv64i_integer_big_test.S  rv64i_integer_big_test.hex  rv64i_load_store_cacheline_test.S  rv64i_load_store_cacheline_test.hex  rv64i_pointer_chase_cache_stress.S  rv64i_pointer_chase_cache_stress.hex  rv64i_ras_depth16_reps4.S  rv64i_ras_depth16_reps4.hex
(+167 files in other folders)
