[package]
name = "hdl-sim"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
riscv-sim = { path = "riscv-functional-sim/sim" }
rvdasm = { git = "https://github.com/iansseijelly/rvdasm.git" }

[features]
default = []
legacy-main = []

[[bin]]
name = "legacy-cosim"
path = "src/bin/legacy_cosim.rs"
required-features = ["legacy-main"]

[[bin]]
name = "ooo-cosim"
path = "src/bin/ooo-cosim.rs"

[build-dependencies]
